# ccwc

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
ccwc/: cli.py  command.py  utils.py
ccwc/scripts/: main.py
tests/: __init__.py  test_ccwc.py
tests/fixtures/: big-content.txt  multilines.txt
